--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,7 +145,7 @@ main .container-main .hero-block div {
   mix-blend-mode: soft-light;
   width: 100%;
   height: 100%;
-  background-image: url("/static/img/hero_block.svg");
+  background-image: url("./static/img/hero_block.svg");
   overflow: hidden;
 }
 main .container-main .hero-block p {
@@ -316,7 +316,7 @@ main .space-lr .container-preview-logotype::before {
   border-radius: 44px;
   width: calc(100% + 32px);
   height: calc(100% + 32px);
-  background-image: url("/static/img/Form.png");
+  background-image: url("./static/img/Form.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
@@ -701,7 +701,7 @@ main .container-tab-content .tab-right .godcontent .img-bg {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/static/img/block-crap.svg");
+  background-image: url("./static/img/block-crap.svg");
   border: none;
   box-shadow: none;
   outline: 0;
@@ -835,7 +835,7 @@ main .container-three-card .row-card .card-svg .bg-card-svg {
   margin-bottom: 98px;
   width: 100%;
   height: 380px;
-  background-image: url("/static/img/tab_element_icon/svg-card-bg.png");
+  background-image: url("./static/img/tab_element_icon/svg-card-bg.png");
   background-size: cover; /* Зображення розтягується на всю ширину і висоту елемента */
   background-position: center; /* Зображення центрується в елементі */
   background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -901,7 +901,7 @@ main .container-three-card .row-card .card-commercial .bg-card-svg {
   margin-top: auto;
   width: 100%;
   height: 490px;
-  background-image: url("/static/img/tab_element_icon/commercial-card-bg.png");
+  background-image: url("./static/img/tab_element_icon/commercial-card-bg.png");
   background-size: cover; /* Зображення розтягується на всю ширину і висоту елемента */
   background-position: center; /* Зображення центрується в елементі */
   background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -974,7 +974,7 @@ main .container-three-card .card-free .bg-card-free {
   margin-top: auto;
   width: 50%;
   height: 463px;
-  background-image: url("/static/img/tab_element_icon/free-card-bg.png");
+  background-image: url("./static/img/tab_element_icon/free-card-bg.png");
   background-size: cover; /* Зображення розтягується на всю ширину і висоту елемента */
   background-position: center; /* Зображення центрується в елементі */
   background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -1188,7 +1188,7 @@ main .faq .father-dropdown-container .dropdown-container .bg-dropdown-container 
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/static/img/block-crap.svg");
+  background-image: url("./static/img/block-crap.svg");
   border: none;
   box-shadow: none;
   outline: 0;
@@ -1282,11 +1282,11 @@ main .faq .father-dropdown-container .dropdown-container .bg-dropdown-container 
 }
 .cozy-web-app__preview div.left {
   border-radius: 0 12px 12px 0;
-  background-image: url("/static/img/app_preview_left.png");
+  background-image: url("./static/img/app_preview_left.png");
 }
 .cozy-web-app__preview div.right {
   border-radius: 12px 0 0 12px;
-  background-image: url("/static/img/app_preview_right.png");
+  background-image: url("./static/img/app_preview_right.png");
 }
 
 .feactures {
@@ -1420,7 +1420,7 @@ main .faq .father-dropdown-container .dropdown-container .bg-dropdown-container 
     border-radius: 44px;
     width: calc(100% + 24px);
     height: calc(100% + 24px);
-    background-image: url("/static/img/Form_mobile.png");
+    background-image: url("./static/img/Form_mobile.png");
     border-radius: 32px;
   }
   main .space-lr .container-preview-logotype .div-free {
@@ -1806,11 +1806,11 @@ main .faq .father-dropdown-container .dropdown-container .bg-dropdown-container 
   }
   .cozy-web-app__preview div.left {
     border-radius: 12px;
-    background-image: url("/static/img/top-p.png");
+    background-image: url("./static/img/top-p.png");
   }
   .cozy-web-app__preview div.right {
     border-radius: 12px;
-    background-image: url("/static/img/bot-p.png");
+    background-image: url("./static/img/bot-p.png");
   }
   .feactures {
     display: flex;
