--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -53,7 +53,7 @@ main {
                 mix-blend-mode: soft-light;
                 width: 100%;
                 height: 100%;
-                background-image: url('./static/img/hero_block.svg');
+                background-image: url('./../img/hero_block.svg');
                 overflow: hidden;
             }
             p {
@@ -238,7 +238,7 @@ main {
                 width: calc(100% + 32px);
                 height: calc(100% + 32px);
                
-                background-image: url('./static/img/Form.png');
+                background-image: url('./../img/Form.png');
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
                 background-position: center;
@@ -655,8 +655,7 @@ main {
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    background-image: url('./static/img/block-crap.svg');
-                    
+                    background-image: url('./../img/block-crap.svg');
                     border: none;
                     box-shadow: none;
                     outline:0;
@@ -802,7 +801,7 @@ main {
                     margin-bottom: 98px;
                     width: 100%;
                     height: 380px;
-                    background-image: url('./static/img/tab_element_icon/svg-card-bg.png');
+                    background-image: url('./../img/tab_element_icon/svg-card-bg.png');
                     background-size: cover;  /* Зображення розтягується на всю ширину і висоту елемента */
                     background-position: center;  /* Зображення центрується в елементі */
                     background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -868,7 +867,7 @@ main {
                     margin-top: auto;
                     width: 100%;
                     height: 490px;
-                    background-image: url('./static/img/tab_element_icon/commercial-card-bg.png');
+                    background-image: url('./../img/tab_element_icon/commercial-card-bg.png');
                     background-size: cover;  /* Зображення розтягується на всю ширину і висоту елемента */
                     background-position: center;  /* Зображення центрується в елементі */
                     background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -946,7 +945,7 @@ main {
                     margin-top: auto;
                     width: 50%;
                     height: 463px;
-                    background-image: url('./static/img/tab_element_icon/free-card-bg.png');
+                    background-image: url('./../img/tab_element_icon/free-card-bg.png');
                     background-size: cover;  /* Зображення розтягується на всю ширину і висоту елемента */
                     background-position: center;  /* Зображення центрується в елементі */
                     background-repeat: no-repeat; /* Запобігає повторенню зображення, якщо воно менше, ніж елемент */
@@ -1177,7 +1176,7 @@ main {
                     left: 0;
                     width: 100%;
                     height: 100%;
-                    background-image: url('./static/img/block-crap.svg');
+                    background-image: url('./../img/block-crap.svg');
                         
                     border: none;
                     box-shadow: none;
@@ -1278,11 +1277,11 @@ main {
         background-repeat: no-repeat; 
         &.left {
            border-radius: 0 12px 12px 0;
-            background-image: url('./static/img/app_preview_left.png');
+            background-image: url('./../img/app_preview_left.png');
         }
         &.right {
             border-radius: 12px 0 0 12px;
-            background-image: url('./static/img/app_preview_right.png');
+            background-image: url('./../img/app_preview_right.png');
         }
     }
 }
