--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -42,7 +42,7 @@ footer section .footer-hero .img-footer-hero {
   mix-blend-mode: soft-light;
   width: 100%;
   height: 100%;
-  background-image: url("./static/img/hero_block.svg");
+  background-image: url("./../img/hero_block.svg");
   overflow: hidden;
 }
 footer section .footer-hero p {
