--- a/static/scss/footer.scss
+++ b/static/scss/footer.scss
@@ -44,7 +44,7 @@ footer {
                 mix-blend-mode: soft-light;
                 width: 100%;
                 height: 100%;
-                background-image: url('./static/img/hero_block.svg');
+                background-image: url('./../img/hero_block.svg');
                 overflow: hidden;
             }
             p {
