--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -656,6 +656,7 @@ main {
                     width: 100%;
                     height: 100%;
                     background-image: url('./../img/block-crap.svg');
+                    
                     border: none;
                     box-shadow: none;
                     outline:0;
@@ -1278,10 +1279,12 @@ main {
         &.left {
            border-radius: 0 12px 12px 0;
             background-image: url('./../img/app_preview_left.png');
+            box-shadow: 0 0 0 1.2px #DADCE8;
         }
         &.right {
             border-radius: 12px 0 0 12px;
             background-image: url('./../img/app_preview_right.png');
+            box-shadow: 0 0 0 1.2px #DADCE8;
         }
     }
 }
