--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -799,7 +799,8 @@ main {
                     max-width: 588px;
                 }
                 .bg-card-svg {
-                    margin-bottom: 98px;
+                    margin-top: auto;
+                    margin-bottom: 0px;
                     width: 100%;
                     height: 380px;
                     background-image: url('./../img/tab_element_icon/svg-card-bg.png');
